Fix image gallery margin on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -294,6 +294,10 @@ p {
 
   img:last-child {
     margin-right: 0 !important;
+
+    @include media-query($on-palm) {
+      margin-bottom: 0 !important;
+    }
   }
 }
 
